# fiap-eml-tech-challenge-fase-1

./: DEVELOPEMENT_WORKSPACE.md  README.md  books_to_scrape.csv  main.py  pyproject.toml
api/: README.md  api_Categories.py  api_books.py  api_health_core.py  api_id_book_core.py  api_main.py  api_opcional  api_opcional_books_best_rated.py  api_opcional_books_price_range.py  api_opcional_books_top_rated.py  api_opcional_categories.py  api_opcional_overview.py  api_title_or_categorie.py  pyproject.toml  render.yaml
api/api.egg-info/: PKG-INFO  SOURCES.txt
api/bot/: bot-performance-v1.jmx  result-agr-20251103-202312.csv  result-vrt-20251103-202312.csv
api/bot/massa-de-dados/: book_scraping_data.csv
api/bot/performance-report/: index.html  statistics.json
api/bot/performance-report/content/js/: dashboard.js  graph.js
api/bot/performance-report/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/fiap_eml_api/: __init__.py  api_books.py  api_categories.py  api_health_core.py  api_id_book_core.py  api_main.py  api_opcional_books_best_rated.py  api_opcional_books_price_range.py  api_opcional_categories.py  api_opcional_overview.py  api_title_or_categorie.py  auth_jwt.py  data_base.py  security_core.py
data/: postgresql-deploy.sql
scripts/: Overview Rotas - API's - Tech Tech Challenge.docx  README.md  api.py  books_to_scrape.csv  main.py  main2.py  pipeline_steps.py  pyproject.toml  save_books_to_postgres.py  scrape_books.py
(+2 files in other folders)
