[project]
name = "api"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.37.0",
]

# Dependências opcionais (dev/test)
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"